--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 sudo pacman -Sy
-sudo pacman -S i3 i3-gaps polybar feh picom git zsh bat xclip rofi alacritty net-tools mpv flameshot telegram-desktop kitty chromium neofetch figlet
+sudo pacman -S i3 i3-gaps polybar feh picom git python zsh bat xclip rofi alacritty net-tools mpv flameshot telegram-desktop kitty chromium neofetch figlet
 
 mkdir -p ~/.local/share/fonts/
 
@@ -32,5 +32,4 @@ sudo mv nord.rasi /usr/share/rofi/themes/
 
 sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
-neofetch && figlet -c finish
 
