--- a/install
+++ b/install
@@ -27,6 +27,7 @@ sudo chmod +x ~/.config/polybar/launch.sh
 sudo mv  /usr/bin/cat /usr/bin/ca
 sudo mv /usr/bin/bat /usr/bin/cat
 
+curl -O https://blackarch.org/strap.sh
 wget https://raw.githubusercontent.com/undiabler/nord-rofi-theme/master/nord.rasi
 sudo mv nord.rasi /usr/share/rofi/themes/
 
