--- a/install
+++ b/install
@@ -1,8 +1,24 @@
 #!/bin/bash
-
-sudo pacman -Sy
-sudo pacman -S i3 i3-gaps polybar feh picom git python zsh slim bat xclip rofi alacritty net-tools mpv flameshot ranger telegram-desktop kitty chromium neofetch figlet base base-devel
-
+function check(){
+read -p 'What is your system
+1) arch
+2) debian
+Number your system: ' name
+if [ "$name" == "1" ]; then
+  sudo pacman -Sy
+  sudo pacman -S i3 i3-gaps polybar feh picom git python zsh slim bat xclip rofi alacritty net-tools mpv flameshot ranger telegram-desktop kitty chromium neofetch figlet base base-devel
+else
+  if [ "$name" == "2" ]; then
+  apt update
+  apt-get install -y arandr flameshot arc-theme feh i3blocks i3status i3 i3-wm lxappearance python3-pip rofi unclutter cargo compton papirus-icon-theme imagemagick
+  apt-get install -y libxcb-shape0-dev libxcb-keysyms1-dev libpango1.0-dev libxcb-util0-dev xcb libxcb1-dev libxcb-icccm4-dev libyajl-dev libev-dev libxcb-xkb-dev libxcb-cursor-dev libxkbcommon-dev libxcb-xinerama0-dev libxkbcommon-x11-dev libstartup-notification0-dev libxcb-randr0-dev libxcb-xrm0 libxcb-xrm-dev autoconf meson
+  apt-get install -y libxcb-render-util0-dev libxcb-shape0-dev libxcb-xfixes0-dev terminator mpv wget zsh polybar net-tools kitty
+else
+  echo "Please the fucking number!!!!"; check
+fi
+fi
+}
+check
 mkdir -p ~/.local/share/fonts/
 
 wget https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/Iosevka.zip
